Bug 74474 - Label Wizard freeze with bibliography database
Summary: Label Wizard freeze with bibliography database
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:4.3.0 target:4.2.1
Keywords: regression
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-02-03 20:59 UTC by Laurent Balland
Modified: 2014-02-07 20:14 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Balland 2014-02-03 20:59:02 UTC
Problem description: 
Creating labels with Wizard freeze LibO

Steps to reproduce:
1. File > New > Labels
2. Select Database: Bibliography, Table: biblio, 
3. Insert some fields in Label text
4. New Document

Current behavior:
LibO freeze

Expected behavior:
Labels document should be created like with LibO 4.1.5.1
Comment 1 Laurent Balland 2014-02-03 21:33:37 UTC
Do NOT reproduce with Version: 4.2.0.0.alpha0+
Build ID: 4c809cd1c5141b3a0a531cc21d0fd5e03401dc19
TinderBox: Win-x86@39, Branch:master, Time: 2013-09-27_08:14:18

Reproduce with Version: 4.2.0.0.alpha0+
Build ID: cc2a405915e82c4b332dd25457f76704dc536d7f
TinderBox: Win-x86@39, Branch:master, Time: 2013-10-15_15:51:52
Comment 2 Laurent Balland 2014-02-06 21:20:47 UTC
Bibisect report:

There are only 'skip'ped commits left to test.
The first bad commit could be any of: 69e91d1c97ae94ac25818c02166a43f7b93f27c1 9d89e3dd74a1711bda341e5c3e762cfdeefcffe8
We cannot bisect more!

git bisect log
# bad: [f36b371d24b8b7212e611431b1c26449dc2a5375] source-hash-1581b1fc3ac82a7bd62df968226e98604a4ca52d
# good: [24c6e7658aaf3e673948c97db16265a2f6cd2432] source-hash-90830788b1f8fd61ea86135712868aeda395edd0
git bisect start 'latest' 'oldest'
# bad: [ddb00a71f5ed8b8e4fa2157a519614c69af6477c] source-hash-5d0051efb99c6cbd0dc4dd655a71e7435159f6bc
git bisect bad ddb00a71f5ed8b8e4fa2157a519614c69af6477c
# skip: [2e543cd9c44d10f49374752976893a92b9a0fa58] source-hash-6489f97fc428446c53c17f885963776cdcc21490
git bisect skip 2e543cd9c44d10f49374752976893a92b9a0fa58
# skip: [9b4a704b64dd3c530275cf5750bcc20b66ee2c71] source-hash-0bca15197461f9e0c6f28ce301c2fed2ec4b38cb
git bisect skip 9b4a704b64dd3c530275cf5750bcc20b66ee2c71
# bad: [9855a0ac8f8344ac79a8884bdd59e1fe33e9a8c9] source-hash-3347f41a9b13c317c1d001e7ff501a4b0ee8f896
git bisect bad 9855a0ac8f8344ac79a8884bdd59e1fe33e9a8c9
# skip: [1c243df7915d0e2a6a4058ed1895cb4477a5bfb8] source-hash-51c647cf744480db7ce1c450f6668727cc75d74b
git bisect skip 1c243df7915d0e2a6a4058ed1895cb4477a5bfb8
# good: [36b3fa27843a75b88cdbcbdc494da3b5a5d57a2e] source-hash-33f6696f393363dc9c182dfc732f87465e5e53ea
git bisect good 36b3fa27843a75b88cdbcbdc494da3b5a5d57a2e
# good: [d44ab947bf34f9e1e5e5764b62cef8b7da5dbec0] source-hash-69f61526cd4268a330be1e835e9e52f9b1dbde50
git bisect good d44ab947bf34f9e1e5e5764b62cef8b7da5dbec0
# skip: [1d4464c377a7f74b7f10d0d69e527e280a0657f3] source-hash-82275ecb0c5aae406dcf6637a56a84d729e78ac7
git bisect skip 1d4464c377a7f74b7f10d0d69e527e280a0657f3
# skip: [e53838367c7f7b1cbf23ec7a49984a55daf99103] source-hash-d63a69a087c9c7641e28e2002d7ad56076d08ca1
git bisect skip e53838367c7f7b1cbf23ec7a49984a55daf99103
# bad: [7e250d1ef4777ac84aa65c1499ab1dd69e5271ca] source-hash-43ccd83d2598256de2193348c0b3c7f85fb4870e
git bisect bad 7e250d1ef4777ac84aa65c1499ab1dd69e5271ca
# good: [bb23db5fca980cdeaa681a90226568df00a826e8] source-hash-0089d3ae9442f26695ae742f5fbdeeaf698861f2
git bisect good bb23db5fca980cdeaa681a90226568df00a826e8
# good: [58a25b92caa4df6dab01e0b8384c482754bfe2f8] source-hash-01b7e04172889cbc9e4ac404b105e18ddc062d6f
git bisect good 58a25b92caa4df6dab01e0b8384c482754bfe2f8
# skip: [69e91d1c97ae94ac25818c02166a43f7b93f27c1] source-hash-fa469b2e00d83459faebe4c1fcb3ea1aac5fb20d
git bisect skip 69e91d1c97ae94ac25818c02166a43f7b93f27c1
# bad: [9d89e3dd74a1711bda341e5c3e762cfdeefcffe8] source-hash-764432e36a19f8fd45538f5506f043a624ce2f5c
git bisect bad 9d89e3dd74a1711bda341e5c3e762cfdeefcffe8
# good: [c674113436334576340c075e1429f216c1fddddb] source-hash-3ad12d1a540eeb54fbb34afc3b7a76bf9e3207c3
git bisect good c674113436334576340c075e1429f216c1fddddb
# only skipped commits left to test
# possible first bad commit: [9d89e3dd74a1711bda341e5c3e762cfdeefcffe8] source-hash-764432e36a19f8fd45538f5506f043a624ce2f5c
# possible first bad commit: [69e91d1c97ae94ac25818c02166a43f7b93f27c1] source-hash-fa469b2e00d83459faebe4c1fcb3ea1aac5fb20d
Comment 3 Michael Stahl 2014-02-06 23:22:37 UTC
bibisect range: 3ad12d1a540eeb54fbb34afc3b7a76bf9e3207c3..764432e36a19f8fd45538f5506f043a624ce2f5c

intersect that with comment #1 to get:
 3ad12d1a540eeb54fbb34afc3b7a76bf9e3207c3..cc2a405915e82c4b332dd25457f76704dc536d7f

ahh bibisecting was a waste of time here, it's totally obvious what the bug is...

regression from:

commit fa469b2e00d83459faebe4c1fcb3ea1aac5fb20d
Author:     Noel Grandin <noel@peralex.com>
AuthorDate: Mon Oct 14 13:37:23 2013 +0200

    convert sw/source/ui/app/*.cxx from String to OUString


... but then the inserted field doesn't work, which is because of
the change to ReplacePoint() without adapting the call site from:

commit 263153842741d7ce21cc0bf1c5296a55a1138024
Author:     Matteo Casalin <matteo.casalin@yahoo.com>
AuthorDate: Sun Jul 14 15:21:18 2013 +0200

    String to OUString


fixed on master.
Comment 4 Commit Notification 2014-02-06 23:23:11 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7e61bfe813347949307cdf2876ead3cc42e4cd7b

fdo#74474: sw: fix Label wizard document creation



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-02-06 23:23:24 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9dbe5a576330b7fadd8838249d07aafe548a4ee2

fdo#74474: sw: fix Label wizard document creation harder



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-02-06 23:23:30 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7e61bfe813347949307cdf2876ead3cc42e4cd7b

fdo#74474: sw: fix Label wizard document creation



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2014-02-06 23:23:43 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9dbe5a576330b7fadd8838249d07aafe548a4ee2

fdo#74474: sw: fix Label wizard document creation harder



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-02-07 20:14:23 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e44e7942929ba063715861abe53412c6d867cd50&h=libreoffice-4-2

fdo#74474: sw: fix Label wizard document creation (2 in 1)


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.