fdo#74474: sw: fix Label wizard document creation

Infinite loop in InsertLabEnvText() due to wrong handling of starting '<'.

(regression from fa469b2e00d83459faebe4c1fcb3ea1aac5fb20d)

Change-Id: I1d7ab1b276756bddd87890bb39d3e817330bc6dd